force-app/main/default/objects/Prompt__c/Prompt__c.object-meta.xml
<CustomObject>
    <description>A Prompt used in a ML orchestration</description>
    <label>Prompt</label>
    <nameField>
        <label>Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>