force-app/main/default/objects/Prompt__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>The Logo URL for this Prompt</description>
    <inlineHelpText>The Logo URL for this Prompt</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>