force-app/main/default/objects/Prompt__c/fields/MaxTokens__c.field-meta.xml
<CustomField>
    <fullName>MaxTokens__c</fullName>
    <description>The maximum number of tokens to spend on generating a Prompt Answer</description>
    <inlineHelpText>The maximum number of tokens to spend on generating a Prompt Answer</inlineHelpText>
    <label>Max Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>