force-app/main/default/objects/Prompt__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The recommended AI Model for this Prompt</description>
    <inlineHelpText>The recommended AI Model for this Prompt</inlineHelpText>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
            </value>
            <value>
                <fullName>gpt-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>