force-app/main/default/objects/Prompt__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Order in which a child prompt will be processed</description>
    <inlineHelpText>The Order in which a child prompt will be processed</inlineHelpText>
    <label>Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>