force-app/main/default/objects/Prompt__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>JSON parameter definitions</description>
    <inlineHelpText>JSON parameter definitions</inlineHelpText>
    <label>Parameters</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>