force-app/main/default/objects/Prompt__c/fields/ParentPrompt__c.field-meta.xml
<CustomField>
    <fullName>ParentPrompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Prompt to which this Prompt is subordinate</description>
    <inlineHelpText>The Prompt to which this Prompt is subordinate</inlineHelpText>
    <label>Parent Prompt</label>
    <referenceTo>Prompt__c</referenceTo>
    <relationshipLabel>Child Prompts</relationshipLabel>
    <relationshipName>Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>