force-app/main/default/objects/Prompt__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <description>The text of the Prompt for Completions, the Input field for Edits, and the User message for Chats</description>
    <inlineHelpText>The text of the Prompt for Completions, the Input field for Edits, and the User message for Chats</inlineHelpText>
    <label>Prompt</label>
    <length>8196</length>
    <type>LongTextArea</type>
</CustomField>