force-app/main/default/objects/Prompt__c/fields/PromptCategory__c.field-meta.xml
<CustomField>
    <fullName>PromptCategory__c</fullName>
    <description>The base category for this Prompt</description>
    <inlineHelpText>The base category for this Prompt</inlineHelpText>
    <label>Prompt Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devopment</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>