force-app/main/default/objects/Prompt__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>The System prompt for Chat Completions or the Instructions prompt for the Edit endpoint</description>
    <inlineHelpText>The System prompt for Chat Completions or the Instructions prompt for the Edit endpoint</inlineHelpText>
    <label>System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>