force-app/main/default/objects/Prompt__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>A text list of Tags which identify this Prompt</description>
    <inlineHelpText>A text list of Tags which identify this Prompt</inlineHelpText>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>