force-app/main/default/objects/Prompt__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>The &quot;Creativity Temperature&quot; to use in generating the Prompt Answer</description>
    <inlineHelpText>The &quot;Creativity Temperature&quot; to use in generating the Prompt Answer</inlineHelpText>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>