force-app/main/default/objects/Prompt__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The Title for this Prompt</description>
    <inlineHelpText>The Title for this Prompt</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>