force-app/main/default/objects/Prompt__c/fields/UsedCount__c.field-meta.xml
<CustomField>
    <fullName>UsedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The count of how many times this prompt has been used</description>
    <inlineHelpText>The count of how many times this prompt has been used</inlineHelpText>
    <label>Used Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>