force-app/main/default/objects/Prompt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ParentPrompt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>